tests/negative/gold/merge_types_test.gold
tests/negative/merge_types_test.toit:9:5: error: Class 'int' does not have any method 'foo'
  x.foo
    ^~~
